TP-1485 Fixed field description breaking login form alignments

--- a/public/themes/custom/palvelumanuaali/components/03-organisms/site/site-header/_site-header.scss
+++ b/public/themes/custom/palvelumanuaali/components/03-organisms/site/site-header/_site-header.scss
@@ -544,6 +544,9 @@ body:not(.logged-in) {
           color: clr(alt-header-color)!important;
         }
       }
+      .form-item__description {
+        display: none;
+      }
       label {
         text-align: left;
         font-weight: 700;
